--- a/Read/ReadShareWiki/06.职场总结/01.职场晋升的流程.md
+++ b/Read/ReadShareWiki/06.职场总结/01.职场晋升的流程.md
@@ -4,7 +4,8 @@
 - 03.晋升之中的阶段
 - 04.晋升之后的阶段
 - 05.技术委员会职责
-- 06.晋升职级的介绍
+- 06.能力模型的抽象
+- 07.晋升职级的介绍
 
 
 
@@ -78,12 +79,38 @@
 - 2.研发、测试和运维在面试通过后，招聘方需要通过邮件向技术委员会提交入职同学职级备忘录，记录该同学的职级情况。
 - 3.T5 及以下的同学，在转正时自动定级，T6及以上的同学，在转正后半年到1年内，需要由经理向技术委员会发起定级申请，半年后还未定级的，将无法申请晋升和调薪。
 - 4.专业线评委理论上必须由专业线的同学担任，评委要对过程和结果负责，保证筛选合适和货真价实的同学到符合的级别。
-- 5.不支持跨级定级。
-- 6.晋升时间要求，T6以下的晋升需要在原职级上停留至少半年方可申请晋升。T6、T7的晋升需要在原职级上停留至少一年以及方可申请晋升。T8、T9的晋升需要在原职级上至少停留一年半以上方可申请晋升。
+- 5.不支持跨级定级。晋升时间要求，T6以下的晋升需要在原职级上停留至少半年方可申请晋升。T6、T7的晋升需要在原职级上停留至少一年以及方可申请晋升。T8、T9的晋升需要在原职级上至少停留一年半以上方可申请晋升。
 
 
 
-### 06.晋升职级的介绍
+### 06.能力模型的抽象
+- 为了指导员工晋升，公司一般都会对各个级别的能力要求给出描述。但是因为细分的领域实在太多了，所以公司只能进行非常抽象的描述。
+- 比如，高级工程师的要求是“具备系统思考的能力，能够全面掌握某个技术领域”，而资深工程师的要求是“具备前瞻判断的能力，能够规划技术领域的发展方向”。
+- 为了彻底解决要求不明确的问题，让更好地理解不同职级的能力差异，提炼出了一套兼容性很强又容易理解的能力模型：面向复杂度的多维度能力模型，简称能力模型。
+
+
+#### 6.1 规模复杂度
+- 规模复杂度是指和规模大小有关的复杂度。规模越大，复杂度越高。原因在于规模越大，节点越多，节点间的关系越复杂，而且节点间的关系复杂度是指数增长的。
+- 举个例子说明：技术维度，代码2000行比代码200行复杂度高；团队管理维度，100人比管理10人复杂度高；业务开发维度，某需求10个功能点比2个要复杂一些。
+
+
+#### 6.2 时间复杂度
+- 时间复杂度是指和时间跨度有关的复杂度。时间跨度越长，复杂度越高。原因在于万事万物都处于不断发展变化当中，时间跨度越长，变化的因素和可能方向越多，越难判断准确。
+- 举个例子说明：技术维度，预测三年后技术框架变化比一年要复杂；团队管理维度，持续一年管理业务要比管理一个月要复杂；业务开发维度，三年业务规划要比一年规划要复杂。
+
+
+#### 6.3 环境复杂度
+- 环境复杂度是指和环境不确定性有关的复杂度。很多的判断、决策和行为都依赖于对环境的认知和反应。总的来说，环境不确定性越高，复杂度越高。
+- 环境的不确定性具体分为环境的稳定性、环境的透明性和环境的可预见性3个方面：环境的稳定性，指环境变化的速度快慢。环境的透明性，指是否能够明确地获取环境相关的信息。环境的可预见性，指是否会发生完全无法预料的黑天鹅事件。
+
+
+#### 6.4 创新复杂度
+- 创新复杂度是指和创新程度有关的复杂度。常见的创新包括理论的创新、思想（或者说方法）的创新和技巧的创新。理论创新的复杂度要高于思想创新，而思想创新的复杂度又高于技巧创新。
+
+
+
+
+### 07.晋升职级的介绍
 #### 6.1 T5 高级工程师
 - 初步具备项目级的设计能力和分析能力，具备业务思考能力，能独立完成较低难度的业务功能的整体的设计和开发工作，能做到独挡一面，高质完成具体产品需求。能把产品需求转化为可行的技术需求，能利用已知的技术完整的实现需求，解决具体的技术问题。
 
