--- a/Read/ReadShareWiki/06.职场总结/07.职场困扰和反思.md
+++ b/Read/ReadShareWiki/06.职场总结/07.职场困扰和反思.md
@@ -60,28 +60,113 @@
 
 
 
-### 12.职场得学会邀功
-#### 12.1 先说一下场景
-- 有个同事在公司以及团队干的很不错，能力在团队中也属于中上的，但是一直就是没有领导提拔，好像没有人看到自己的付出，感觉有点憋屈。
-- 很多人会是这种情况，尤其互联网行业众多做技术的，多是属于默默无闻型，只闷声做事，很少表达，更别提与别人勾心斗角与主动邀功了，但是以我这么多年职场摸爬滚打的经验来说，在职场，特定的邀功是必要的。
 
-#### 12.2 邀功而非抢功
-- 邀功，不是抢功，所谓邀功是指自己做的功劳要让别人，尤其是领导知道，如果不是自己的功劳，非要抢别人功劳肯定是不鼓励的，而且别说，抢功在职场也不是什么新鲜事，如果你不学会邀功，那么碰到心机的同事，被别人抢功更是憋屈。
-- 有同学肯定要说了，自己默默付出就好了，还得邀功，那多幼稚，听起来就很尴尬，而且很多人深信，只要默默付出，总有领导会欣赏我的。
-- 职场中的默默付出真不见得就有领导会发现，现在是一个快速的时代，别说领导注意到你了，在稍微大点的公司，团队人数多了点，领导叫不出你的名字都是正常的，更别提领导会主动发现你了。
+### 01.先来看一个案例
+#### 1.1 人事优化案例
+- 几年前公司有一次人事大动荡。那是一个样品开发的高峰期，样品室的工人们卡着时机向高层申请加工资。正好老板出国参展，工人们得不到明确回复，齐刷刷罢工了。老板回来之后，把样品室优化很多人，所有参与罢工的员工干部开除，只留下了一名技术师傅。老板宁愿花高价将产品发外包都不愿意给自己人加工资，这个举动让人目瞪口呆。
+- 许多同事都窃窃私语，说老板太冷血太让人心寒，也有不少人认为老板是意气用事，甚至还有人壮着胆子去劝老板冷静一下。
+- 样品室有位大姐离开的时候，特地跑到我们业务部来诉苦："平时加班无数，孩子发烧都没敢请假，两天没上班就被开除，太不近人情了！我们就要求加个工资，怎么了呢？同样是闹事，师傅能留下，我们却要走人，不就是因为他的技术比我们好一点吗？太不公平了！"
+- 她的哭诉让人顿悟：公司认可的从来就不是员工的付出，而是员工的价值。不是老板看不到你的辛苦，是他觉得你的辛苦对公司没有帮肋。不是老板不愿意给你加工资，是他觉得你不够格加工资。不是留下来的人运气好，而是人家实力更强。
 
 
-#### 12.3 鼓励职场邀功
-- 你做了什么突出贡献，你做出了超预期的成绩，要想办法让团队，让领导知晓。邀功的方式很多，有比较直接干脆的，有隐晦不经意间的，没有一个通用的方法论可以教给你们，不同的公司文化与氛围决定了邀功的方式不一样。
+#### 1.2 企业看中效益
+- 雇佣关系本质上就是一种利益交换，员工为公司创造价值，公司为员工提供福利与发展机遇，这本身就是与过程无关、与情感无关的。
+- 没有哪家企业能离开业绩存活。所以，你在找归属感的时候，公司在看效益；你在谈人情味的时候，公司在看效益；你在打苦情牌的时候，公司还是在看效益。
 
 
-#### 12.4 邀功的方式多样化
-- 邀功的方式很多，有比较直接干脆的，有隐晦不经意间的，没有一个通用的方法论可以教给你们，不同的公司文化与氛围决定了邀功的方式不一样。
-- 假如运营人员做了什么事情，对拉新、促活或者销售有很大的成绩，这时侯事后写一篇总结邮件，把整个过程从策划到执行再到中间遇到的困难，以及之后的经验教训总结出来，发给团队负责人，这也是借经验总结来额外邀功的一种方式。
+
+### 02.相信功劳非苦劳
+#### 2.1 职场不相信苦劳
+- 有这么一类人，每天埋头苦干，加班加点，为的就是让领导看到自己的努力状态，让领导感动，进而给自己升职加薪。但是，这种努力真的能够感动领导吗？
+- 职场上，领导只相信“功劳”，不相信“苦劳”，想要通过自己的努力来感动领导，是最傻的事。职场中最大的谎言就是，没有功劳，也有苦劳。想要用“苦劳”为自己在职场上谋得一席之地，那就太天真了。
 
 
-#### 12.5 闷声做事情也要适当反馈
-- 真得学会必要的邀功，这不是跟别人勾心斗角，而是对自己辛苦努力付出的一种负责，这是一种表现与争取，大家都很忙，没人会一天到晚注意到你，关注到你，你只有自己主动，才能让自己的能力有更大的发挥空间，也才能为自己的付出赢得应有的机会。
+#### 2.2 没有价值会被优化
+- 要知道，职场本质上来说，就是一个利益场和等级场。直白点说，下属是领导创造业绩的工具人，如果你的努力没有成果，没有带给他实际的利益，那么你之于领导而言就是无用的工具，那么下一次组织动荡，你就很有可能被优化。
+- 哪怕你整天加班加点，拼命工作，领导还是认为你没有做好，达不到他的要求。没有业绩，你的努力在领导眼里一文不值。工作还是得做，还是得努力，但要注重成效，提高自己的产出和价值。
+
+
+### 03.避免劳动者思维
+- "工作到极限为止"以劳动时间取胜"属于本书所谓的"劳动者"的思维，如果抱持这种想法，就无法成为"高价值、高效能的生产者"。
+- 专业工作者的工作方式，与"劳动时间越长，赚的钱越多"这种劳动者或工薪族的想法形成对比：不以劳动的时间，而是凭借"造成变化的程度"获取报酬或评价；或者可以说，存在的意义取决于"可产生多少有意义的输出"。
+
+
+
+
+
+### 01.技术发展总框架
+- 在自己职业生涯的第一阶段，大概3-5年的时间，不断探索，发现自己的方向。就是不停地扪心自问，自己到底是个什么性格，又喜欢什么样的东西，不喜欢什么东西，可以用 5 年的时间慢慢摸索，确定。
+- 在职业生涯第一阶段，先做好工具人，然后用5年左右时间，摸索并明确自己的方向。具体的方向要听从个人的兴趣、内心的声音和行业的方向。
+- ![image](https://static001.geekbang.org/resource/image/57/6e/579512f4026e0ec3cc13d891fa931e6e.png?wh=1920*1080)
+
+
+
+### 02.设定稍高的目标
+- 针对个人职业生涯成长，都要设定“跳一跳才能够得着的目标”，有挑战性的目标才能激发出高水准的表现，带来更多的锻炼和提升，当然也不至于够不着，让你产生强烈的挫败感。
+- 如果只设定“便于自己实现的目标”，或是抱有“已经超越了自己制定的目标，从自己的情况来看已经做得很好了”之类的想法，而对于个人来说，成长会停滞，甚至还会倒退。
+- 当然，制定了高标准的目标后，并不是每次都能达成，否则只要制定更高的目标就好了。这件事同样要迭代调整，没达成也没关系，只要积极总结经验教训，确定新的目标，然后继续向着目标冲击就好。
+- 如果你每次都觉得“完成80%也不错”，这问题就大了。满足于做到80%，只能让你应付工作，却不能给你带来成功。没有哪一种成功是轻易得来的，我们必须全力以赴。
+
+
+
+### 03.设置边界要稍大
+- 工作时，不分哪些是我该做的、哪些不是我该做的。做完自己的工作后，对于大部分同事的问题，只要能帮助解决，我都去做。做事也从不设边界，即使负责技术，但遇到产品与销售上有问题，也会积极地参与讨论。
+- 对于我们大多数人来说，进入社会，我们唯一拥有的资本就是自己。在你人生资本的原始累积阶段，如果你连这点额外的努力都不愿意付出，又怎么可能积累到足够的资源呢？
+- 有些人会觉得，每多付出一点额外的努力，公司不就占便宜了吗？这个心态很有问题。优秀的人都是为自己打工，和公司一起成长，相互借力，才能找到自己的价值。无论公司怎么发展，个人能力最终是沉淀到了自己的身上，这远比你浪费时间和摸鱼更好。我们潜意识里常常幻想自己还拥有大把的时间，拥有无限的可能，但很多现实是，你的时间就在庸庸碌碌的工作里一点一点被消耗掉了，而不是每日精进，精益求精。
+
+
+
+
+
+
+
+### 06.技能要高于薪酬
+#### 6.1 外酬和内酬
+- 在职业生涯理论中，对于薪酬有“外酬”和“内酬”之说，也就是“内收入”与“外收入”。**所谓“外酬”指的是企业给你发的工资、奖金、补贴、福利等，以及企业现在给你确定的岗位和职务，而“内酬”则指的是员工在工作过程中获得的培训机会、成长的空间、职业资历、技能水平的提高等**。
+
+
+#### 6.2 外生涯和内生涯
+- 相应的，一个员工的职业生涯也就有了“外生涯”与“内生涯”之分，“外生涯”表示你现在的薪水与职务水平等，“内生涯”表示你现在的知识、能力和发展潜力等，是你现在所拥有的职业水平。
+- 由此，不难理解，薪酬是大于薪水的，衡量收入的高低不仅要看“外酬”、“外收入”薪水的高低，更要看“内酬”、“内收入”的多少。
+
+
+#### 6.3 提升自己的内功
+- 在职业生涯过程中，关注薪酬、待遇是应该的，也是必须的。但是，薪酬、待遇、职位之类的东西只是属于外职业生涯，外职业生涯的因素通常由别人决定、给予的，也容易被别人否定和剥夺。
+- 企业今天能给你加薪，明天也可能给你降薪，今天给你升职，明天也可能会降你的职、免你的职。**而知识、能力、技能、素养、态度这些“内收入”，则主要靠借助企业的平台，自己持续努力地学习、探索和积累获得，这些并不会随外职业生涯因素的改变而丧失**。
+- 可见，“内生涯”是根本，“外生涯”是表象，“内生涯”是原因，“外生涯”是结果，“内生涯”决定“外生涯”，“内收入”决定“外收入”。所以，我们应该眼睛向内，注重提高自己的职业技能，这样才能在职业竞争中无往而不胜。
+
+
+
+
+
+### 02.嫌弃工作太琐杂
+- 对个人而言，工作内容琐杂，其实就是工作琐碎，杂七杂八的零零碎碎的，大大小小的事。不管是千头万绪的事，还是零零乱乱的事，它们都有个轻重缓急，先后顺序问题！这就是要求你，要一个有分析有判断的工作能力！
+- 長远的工作，搞一个年度工作规划，短期的工作，制定一个月份计划，或者一周的工作计划，甚至小到一天的琐杂工作，都不能眉毛胡子一把抓。
+- 一天的工作也要有一个小小的计划安排，哪件事先做，哪件事可以放到下班前必须作完，这样安排好的工作，做起工作来得心应手，我个人觉得，只要能按上述工作规律去按排你的琐杂工作，就能提高工作效率！
+- 曾抱怨过：“我们领导每天都让我做这做那，而且很多事情都是重复的，烦都烦死了，您说我该怎么办啊？”你在第一次执行时是不是哪里没有做好呢？领导是不是因为对之前的执行结果不满意，所以要你再做一次呢？”只知道自己做完了很多，却不知道自己做得怎么样。
+
+
+
+### 03.技术上一些困惑
+- 技术学习的困惑：当达到一个瓶颈时，可以学习的参考系越来越少，首先是因为高端技术人才呈现倒金字塔形态，身边缺少能引领你的人生导师；其次，业内的技术交流，大多数在做科普以及分析行业趋势，很难讲具体技术细节，到达一定阶段后对个人提升作用越来越小。
+- 技术深度与广度的选择的困惑：技术深度的进一步提升，可以逐步做到业界大牛，专业技能越来越强，广度的延伸也更容易变成全栈技术人才，两者各有利弊，个人时间和精力有限，如何抉择？
+- 技术方向的困惑：大型互联网公司的技术框架基本都在最初选型时确立，与当时的业务规划、业界当时的技术趋势、个人的过往经验积累相关，成熟规模大的业务从稳定性考虑，一般技术选型落后新技术2、3年，对于技术人员来说，从实际工作考虑需要使用老技术，但是业界的趋势又是在朝着新技术的方向发展。
+
+
+
+
+### 04.要让进度被关注
+- 前阵子，有个同事说，他因为工位调整，坐到了领导的旁边。刚开始的时候他还有点不适应，老觉得领导在看他，后来发现，人家根本没这个闲功夫儿。不过有意思的是，自从他觉得自己被上级“重点关注”后，效率跟以前相比竟然提升了一大截，工作干劲也上来了，做事如有神助。
+- 后来研究了下，发现这种现象可以用管理学中的一个名词——霍桑效应来解释。具体指的是，当一个人处于“被观察”，或者以为自己“被观察”的状态下，他的生产率就会得到提升。一旦我们想象有人盯着自己，就会开始注意自己的行为。
+
+
+
+### 09.开拓下技能思维
+- 除了关注技术发展的同时，也多关注行业的动态。我可以不懂大家怎么做，但你不能不知道大家在做什么，技术的行业的需求和发展方向又是什么，这些对于你的技术没有太多的帮助与提升，却对你的发展大有帮助。
+
+
+
+
 
 
 
