--- a/Read/ReadShareWiki/06.职场总结/08.职场注意多事项.md
+++ b/Read/ReadShareWiki/06.职场总结/08.职场注意多事项.md
@@ -14,7 +14,8 @@
 - 13.不要盲目下决定
 - 14.罚款真的是无效
 - 15.身后莫说人是非
-- 16.要遵守游戏规则
+- 16.职场得学会邀功
+- 17.要遵守游戏规则
 
 
 
@@ -132,7 +133,33 @@
 - 规则告诉我们“言及莫论人非”，潜规则将其深化成“言及莫论人”，因为少了一个“非”字，也就少了失言的机会。都说言多必失，可言少也不一定没有失误，如果在错误的时间错误的地点和错误的对象说了一句涉及到具体人事的大实话，那后果真的堪比失言。
 
 
-### 16.要遵守游戏规则
+
+### 16.职场得学会邀功
+#### 16.1 先说一下场景
+- 有个同事在公司以及团队干的很不错，能力在团队中也属于中上的，但是一直就是没有领导提拔，好像没有人看到自己的付出，感觉有点憋屈。
+- 很多人会是这种情况，尤其互联网行业众多做技术的，多是属于默默无闻型，只闷声做事，很少表达，更别提与别人勾心斗角与主动邀功了，但是以我这么多年职场摸爬滚打的经验来说，在职场，特定的邀功是必要的。
+
+
+#### 16.2 邀功而非抢功
+- 邀功，不是抢功，所谓邀功是指自己做的功劳要让别人，尤其是领导知道，如果不是自己的功劳，非要抢别人功劳肯定是不鼓励的，而且别说，抢功在职场也不是什么新鲜事，如果你不学会邀功，那么碰到心机的同事，被别人抢功更是憋屈。
+- 有同学肯定要说了，自己默默付出就好了，还得邀功，那多幼稚，听起来就很尴尬，而且很多人深信，只要默默付出，总有领导会欣赏我的。
+- 职场中的默默付出真不见得就有领导会发现，现在是一个快速的时代，别说领导注意到你了，在稍微大点的公司，团队人数多了点，领导叫不出你的名字都是正常的，更别提领导会主动发现你了。
+
+
+#### 16.3 鼓励职场邀功
+- 你做了什么突出贡献，你做出了超预期的成绩，要想办法让团队，让领导知晓。邀功的方式很多，有比较直接干脆的，有隐晦不经意间的，没有一个通用的方法论可以教给你们，不同的公司文化与氛围决定了邀功的方式不一样。
+
+
+#### 16.4 邀功的方式多样化
+- 邀功的方式很多，有比较直接干脆的，有隐晦不经意间的，没有一个通用的方法论可以教给你们，不同的公司文化与氛围决定了邀功的方式不一样。
+- 假如运营人员做了什么事情，对拉新、促活或者销售有很大的成绩，这时侯事后写一篇总结邮件，把整个过程从策划到执行再到中间遇到的困难，以及之后的经验教训总结出来，发给团队负责人，这也是借经验总结来额外邀功的一种方式。
+
+
+#### 16.5 闷声做事情也要适当反馈
+- 真得学会必要的邀功，这不是跟别人勾心斗角，而是对自己辛苦努力付出的一种负责，这是一种表现与争取，大家都很忙，没人会一天到晚注意到你，关注到你，你只有自己主动，才能让自己的能力有更大的发挥空间，也才能为自己的付出赢得应有的机会。
+
+
+### 17.要遵守游戏规则
 - 员工和老板之间的关系，就好像是一场游戏。是游戏就会有游戏规划，否则，游戏就玩不下去。但是，游戏规则是谁制定的呢？当然是老板，各种利益也偏向老板！身在职场的你，一开始看不惯这种现象，是很正常的。
 - 但你一定要学会慢慢接受这种游戏规则。不要试图改变这种规则，因为在老板面前，你没有太多的话语权。说得再难听些，你只是一个打工的，如果不想做，可以离开。记住这句话：“如果你不是游戏规则的制定者，你的选择只有两条：要么屈从，要么离开！”
 
