--- a/Read/ReadMeWiki/01.大型方案/24.网络请求库封装实践.md
+++ b/Read/ReadMeWiki/01.大型方案/24.网络请求库封装实践.md
@@ -6,8 +6,10 @@
     - 1.4 设计目标
     - 1.5 产生收益分析
 - 02.网络库技术点
+    - 2.1 网络请求流程
 - 03.网络库封装设计
     - 3.1 网络库设计思路
+    - 3.7 添加拦截器
 - 04.网络封装技术点
     - 4.4 网络日志打印
     - 4.5 网络数据加解密
@@ -36,9 +38,27 @@
 #### 1.5 产生收益分析
 
 
+### 02.网络库技术点
+#### 2.1 网络请求流程
+
+
+
+### 03.网络库封装设计
+#### 3.1 网络库设计思路
+
+
+#### 3.7 添加拦截器
+
 
 ### 04.网络封装技术点
 #### 4.4 网络日志打印
+- 如何打印日志
+    - OkHttp提供了一个拦截器接口，使得在打印日志时极为方便，并且对接口代码无入侵性。
+- 适当地添加日志拦截器
+    - 打印日志一般都是在debug的时候才需要，对于release即发布出去的版本，是不需要打印请求的日志的。
+
+
+
 
 
 #### 4.5 网络数据加解密
