--- a/Read/ReadMeWiki/01.大型方案/24.网络请求库封装实践.md
+++ b/Read/ReadMeWiki/01.大型方案/24.网络请求库封装实践.md
@@ -7,14 +7,13 @@
     - 1.5 产生收益分析
 - 02.网络库技术点
     - 2.1 网络请求流程
-    - 2.2 
 - 03.网络库封装设计
     - 3.1 网络库设计思路
     - 3.7 添加拦截器
 - 04.网络封装技术点
     - 4.4 网络日志打印
     - 4.5 网络数据加解密
-    - 4.6 CA证书校验
+    - 4.6 HTTPS证书校验
 - 05.方案基础设计
     - 5.1 整体架构图
     - 5.2 UML设计图
@@ -60,13 +59,16 @@
     - 打印日志一般都是在debug的时候才需要，对于release即发布出去的版本，是不需要打印请求的日志的。
 
 
-
-
-
 #### 4.5 网络数据加解密
 
 
-#### 4.6 CA证书校验
+#### 4.6 HTTPS证书校验
+- 背景说明
+    - 如何在 Android 端下和服务端实现自制证书的连接？
+- App如何证书校验
+    - 
+
+
 
 
 ### 05.方案基础设计
