--- a/Read/ReadMeWiki/01.大型方案/07.WebView封装实践.md
+++ b/Read/ReadMeWiki/01.大型方案/07.WebView封装实践.md
@@ -72,13 +72,8 @@
 - 触发加载网页的行为
     - 主要有两种方式：（A）点击页面，触发<link>标签；（B）调用WebView的loadUrl()方法。这两种方法都会发出一条地址，区别就在于这条地址是目的地址还是重定向地址。
 - 加载h5页面大概流程
-    - dns域名解析(将域名解析成ip地址，比较耗时)
-    - TCP的三次握手
-    - 建立TCP连接后发起HTTP请求
-    - 服务器响应HTTP请求
-    - 浏览器解析html代码
-    - 同时请求html代码中的资源（如js、css、图片等），注意html中资源是串行
-    - 最后浏览器对页面进行渲染并呈现给用户
+    - 1.dns域名解析(将域名解析成ip地址，比较耗时)；2.TCP的三次握手；3.建立TCP连接后发起HTTP请求；4.服务器响应HTTP请求
+    - 5.浏览器解析html代码；6.同时请求html代码中的资源（如js、css、图片等），注意html中资源是串行；7.最后浏览器对页面进行渲染并呈现给用户
 
 
 
