--- a/Read/ReadMeWiki/01.大型方案/24.网络请求库封装实践.md
+++ b/Read/ReadMeWiki/01.大型方案/24.网络请求库封装实践.md
@@ -7,9 +7,10 @@
     - 1.5 产生收益分析
 - 02.网络库技术点
     - 2.1 网络请求流程
+    - 2.2 常见网络请求
 - 03.网络库封装设计
     - 3.1 网络库设计思路
-    - 3.7 添加拦截器
+    - 3.7 添加公共参数
 - 04.网络封装技术点
     - 4.4 网络日志打印
     - 4.5 网络数据加解密
@@ -43,12 +44,24 @@
 #### 2.1 网络请求流程
 
 
+#### 2.2 常见网络请求
+- 同步请求和异步请求。
+    ``` java
+    //同步
+    Response response = okHttpClient.newCall(request).execute();
+    //异步
+    okHttpClient.newCall(request).enqueue(callback);
+    ```
+
+
 
 ### 03.网络库封装设计
 #### 3.1 网络库设计思路
 
 
-#### 3.7 添加拦截器
+#### 3.7 添加公共参数
+- 如何添加公共参数？
+
 
 
 ### 04.网络封装技术点
@@ -57,17 +70,30 @@
     - OkHttp提供了一个拦截器接口，使得在打印日志时极为方便，并且对接口代码无入侵性。
 - 适当地添加日志拦截器
     - 打印日志一般都是在debug的时候才需要，对于release即发布出去的版本，是不需要打印请求的日志的。
+- 
+
 
 
 #### 4.5 网络数据加解密
+- 网络数据加密的需求
+    - 为了项目数据安全性，对请求体和响应体加密，那肯定要知道请求体或响应体在哪里，然后才能加密，其实都一样不论是加密url里面的query内容还是加密body体里面的都一样。
+- 对数据哪里进行加密和解密
+    - 目前对数据返回的data进行加解密。
+- 加密和解密使用效率分析
+    - 待完善
 
 
 #### 4.6 HTTPS证书校验
 - 背景说明
     - 如何在 Android 端下和服务端实现自制证书的连接？
-- App如何证书校验
-    - 
-
+- App如何证书校验。目前okHttp已经提供了Api来处理证书校验的功能
+    ``` java
+    //不建议使用这个，方法过时，使用反射机制寻找X509信任管理类，消耗了不必要的性能。
+    okHttpBuilder.sslSocketFactory(sslSocketFactory);
+    //会传入信任管理类数组中的第一条
+    okHttpBuilder.sslSocketFactory(sslSocketFactory,x509TrustManager);
+    okHttpBuilder.hostnameVerifier(hostnameVerifier);
+    ```
 
 
 
@@ -107,7 +133,7 @@
 
 ### 07.其他说明介绍
 #### 7.1 参考链接
-
+- 安卓OKHTTP库添加HTTPS证书验证：http://events.jianshu.io/p/bf6d5432fa55
 
 
 
