--- a/Read/ReadMeWiki/01.大型方案/25.App基类库封装实践.md
+++ b/Read/ReadMeWiki/01.大型方案/25.App基类库封装实践.md
@@ -51,9 +51,10 @@
     - ViewPager有预加载机制，即默认情况下当前页面左右两侧的1个页面会被加载，以方便用户滑动切换到相邻的界面时，可以更加顺畅的显示出来。通过ViewPager的setOffscreenPageLimit(int limit)可以设置预加载页面数量，当前页面相邻的limit个页面会被预加载进内存。
 - 为何要有ViewPager2这个控件？
     - ViewPager2内部是通过RV实现的。但是对于Fragment的处理有单独的Adapter实现。
-- 如何实现局部刷新操作？
+- ViewPager2如何实现局部刷新操作？
     - RecyclerView基于DiffUtil可以实现局部更新，FragmentStateAdapter也可以对Fragment实现局部更新。
-- 
+- ViewPager2预加载说明
+    - 
 
 
 
