--- a/Read/ReadShareWiki/02.计划管理/01.为何要做好计划.md
+++ b/Read/ReadShareWiki/02.计划管理/01.为何要做好计划.md
@@ -31,7 +31,7 @@
 
 ### 03.做计划有何意义
 - 先抽象一个简单的模型，比如你想制定一个你自己从明天开始的跑步计划。听到给跑步做计划的第一反应，感觉似乎很简单。认为简单的重要原因是缺乏一个明确、需要努力而又可行的目标。
-- 这或许是做计划最需要的前提，也是计划的首要意义，千万别为了做计划而做计划。举我自己的例子：
+- 做计划的好处在于让你的目标和时间都更清晰，如果不做计划，你极有可能在目标和时间都模糊的情况下选择娱乐和消遣。这或许是做计划最需要的前提，也是计划的首要意义，千万别为了做计划而做计划。举我自己的例子：
 
 
 #### 3.1 第一步计划
@@ -145,12 +145,7 @@
 
 
 ### 10.做计划闭环思维
-- 找到做计划背景或痛点。
-- 给自己制定目标。
-- 将目标分解成任务。
-- 计划的落地执行。
-- 计划可行性分析和调整。
-- 阶段总结和持续迭代。
+- 找到做计划背景或痛点。给自己制定目标。将目标分解成任务。计划的落地执行。计划可行性分析和调整。阶段总结和持续迭代。这样就逐步形成计划的闭环！
 
 
 
