--- a/Read/ReadShareWiki/02.计划管理/03.计划的落地策略.md
+++ b/Read/ReadShareWiki/02.计划管理/03.计划的落地策略.md
@@ -48,7 +48,9 @@
 
 ### 06.将工作任务细化
 - 在进行工作阶段分解过程中，一定要认真的将工作进行细化，要细化到月、周、日的级别，才能保证阶段分解真的有实际意义。
-- 日常工作中，我们经常会听到量化这一词，其实量化的意思，也就是将工作进行最小单位的细化，使之能够清晰的展现出每天做什么、每周做什么、每月做什么，这样一层一层的，得出季度收获，半年收获，年度收获。工作落地过程中，不怕细分，分的越细，往往工作效果越好，工作效率越高。
+- 日常工作中，我们经常会听到量化这一词，其实量化的意思，也就是将工作进行最小单位的细化，使之能够清晰的展现出每天做什么、每周做什么、每月做什么，这样一层一层的，得出季度收获，半年收获，年度收获。
+- 制定任务或目标时，要学会将大目标拆解成小目标，直到每一个小目标足够清晰、简单，具体，你一看就知道如何做到。任务分解一定要足够细，细到足够具体和可顺畅执行的程度，只要足够细，就没有难的任务。工作落地过程中，不怕细分，分的越细，往往工作效果越好，工作效率越高。
+
 
 
 ### 07.小目标层层递进
