--- a/Read/ReadShareWiki/02.计划管理/04.计划可行和调整.md
+++ b/Read/ReadShareWiki/02.计划管理/04.计划可行和调整.md
@@ -4,6 +4,7 @@
 - 03.时间周期的调整
 - 04.有兴趣执行下去
 - 05.关键节点要评估
+- 06.计划逐步增难度
 
 
 
@@ -35,6 +36,9 @@
 - 建议每周日晚上对上周所做的事情进行回顾，并盘点下周要做的事情，同时看看现在所做的事情和年度计划是否保持一致，确保没有偏离方向。
 
 
+
+### 06.计划逐步增难度
+- 设置比你当前水平高一点点的目标是更为合适的，这样既有挑战的动力，又不会因为太难而畏惧不前。这里的 ”高一点点“ 要注意，应该理解为比 ”跳一跳才能够得着“ 难度更低。
 
 
 
