--- a/Read/ReadShareWiki/02.计划管理/06.很难坚持怎么办.md
+++ b/Read/ReadShareWiki/02.计划管理/06.很难坚持怎么办.md
@@ -19,6 +19,7 @@
 ### 03.想太多而做太少
 - 绝大部分人，总是想的太多，做的太少。想尝试这个，也想干那个，但是思来想去，时间全都浪费了，但是啥都没开始干。
 - 当你想做一件事的时候，不要想的太多，先坚定的执行起来，先干起来再说，在干的过程中，你会不断发现各种问题，然后不断去调整改进，直到找到一条属于自己的方向。
+- 大多数人往往会低估事情完成的难度，高估自己的执行能力，制定与自身能力远不相符的目标。而，最终的结局，也就可想而知了。因此，最高效的成长反而是从认清自身的那一刻开始的。
 - 执行力真的很重要，而且个人认为，几乎是最重要的能力之一，很多时候做事情，可能不需要太多的套路与复杂的玩法，只需要坚定的执行就可以了。
 - 执行力一定是第一位的，没有执行力，所有多么成熟严谨的方法论都是白搭。承认吧，你不是能力不行，你也不是比别人差，很多时候，你就是执行力不行。坚持听起来是最简单的，但是往往也是最难的。
 
