--- a/Read/ReadShareWiki/07.底层思维/01.做事专注的锻炼.md
+++ b/Read/ReadShareWiki/07.底层思维/01.做事专注的锻炼.md
@@ -52,9 +52,11 @@
 - 一边工作一边玩手机或看电视。研究指出，一边工作一边看电视、看视频，对发展专注力有很大危害。有些误区，认为对着电视半天一动不动，就说明专注力很强，其实不是。这种状态下，没有主动调用控制专注力的肌肉群，而是呈现一种刺激过度的状态。
 
 
+
 #### 4.2 让一些干扰因素远离
-- 有时候不是我们意志不坚定，而是“敌人”太狡猾。如果我们面前摆放着手机、平板、零食等，那么我们的注意力是不是很容易就被它们吸引走了呢？
-- 所以，把这些能影响学习的物品搬离我们的视线，当只有学习任务时，我们会更容易进入专注的状态。
+- 有时候不是我们意志不坚定，而是“敌人”太狡猾。如果我们面前摆放着手机、平板、零食等，那么我们的注意力是不是很容易就被它们吸引走了呢？所以，把这些能影响学习的物品搬离我们的视线，当只有学习任务时，我们会更容易进入专注的状态。
+- 做充分的免干扰措施，例如：1、微信尽量开免打扰模式；2、手机电话铃声调整为静音和震动，或在接陌生电话时使用手动回复模式；3、关掉或隐藏分散注意力的窗口，要专注于一个网页工作和学习时，开一个新的浏览器窗口。
+
 
 
 #### 4.3 减少烦恼干扰
