--- a/Read/ReadMeWiki/01.大型方案/04.轻量级线程池实践.md
+++ b/Read/ReadMeWiki/01.大型方案/04.轻量级线程池实践.md
@@ -1,5 +1,5 @@
 ### 目录介绍
-- 01.整体概述
+- 01.整体概述说明
     - 1.1 项目背景
     - 1.2 遇到问题
     - 1.3 基础概念介绍
@@ -10,6 +10,8 @@
     - 2.2 如何管理线程
     - 2.3 线程池创建
     - 2.4 线程池生命周期
+    - 2.5 线程池弊端分析
+    - 2.6 线程池方案对比
 - 03.线程分析
     - 3.1 线程为何有优先级
     - 3.2 线程池如何管理线程
@@ -21,7 +23,7 @@
     - 4.1 封装总体思路
     - 4.2 主和子线程通信
     - 4.3 使用静态代理模式
-    - 4.4 
+    - 4.4 处理不同线程池
     - 4.6 设置自定义Task
     - 4.7 线程池使用分析
 - 05.方案基础设计
@@ -108,10 +110,27 @@
     ScheduledExecutorService scheduledThreadPool = Executors.newScheduledThreadPool(5);
     ScheduledExecutorService singleThreadScheduledPool = Executors.newSingleThreadScheduledExecutor();
     ``` 
-
+- 每种线程池大概的作用简单说一下
+    - newFixedThreadPool（使用阻塞队列：LinkedBlockingQueue） 建立固定线程数量的线程池，每提交一个任务就会建立一个线程，直到达到线程池的最大大小。若是其中某个线程发生异常的话， 那么会有一个新的线程来替代它
+    - newSingleThreadExecutor（使用阻塞队列：LinkedBlockingQueue） 建立单个线程的线程池，也就是只有一个线程，那么，全部提交上来的任务就是按顺序执行。若是这个线程发生异常的话，那么 会有一个新的线程来替代它
+    - newCachedThreadPool（使用阻塞队列：SynchronousQueue） 建立一个大小不受限制的，可缓存的，线程数量自动扩容，自动销毁的线程池，若是线程池的大小超过了处理任务所须要的线程，那么线程池会回收部分线程（时间是60s）
+    - newScheduledThreadPool （使用阻塞队列：DelayedWorkQueue） 建立一个大小无限的线程池，支持定时任务和周期性执行的任务
 
 
 #### 2.4 线程池生命周期
+
+
+#### 2.5 线程池弊端分析
+- 线程池如果使用不当也可以能造成代码缺陷
+    - FixedThreadPool和SingleThreadPoolPool : 请求队列使用的是LinkedBlockingQueue，容许的请求队列的长度是Integer.MAX_VALUE，可能会堆积大量的请求，从而致使 OOM
+    - CachedThreadPool和ScheduledThreadPool : 容许建立的线程数量是Integer.MAX_VALUE，可能会建立大量的线程池， 从而致使 OOM
+- 以上也就是建议本身配置线程池的缘由，那么线程池的那些参数究竟该如何配置？ 线程池大小的配置：通常根据任务类型 和 CPU的核数(N)工具
+
+
+
+#### 2.8 线程池方案对比
+- 推荐ArchTaskExecutor；其次是RxJava；再其次是 AsyncTask
+
 
 
 ### 03.线程分析
@@ -141,7 +160,13 @@
 - 静态代理理解和应用：AbsTaskExecutor(抽象类) + DefaultTaskExecutor(委托类) + DelegateTaskExecutor(代理类)
 
 
-#### 4.4 
+
+#### 4.4 处理不同线程池
+- 处理io密集流
+- 处理比较核心的任务
+- 处理cpu密集任务
+
+
 
 
 #### 4.6 设置自定义Task
