--- a/Read/ReadMeWiki/01.大型方案/04.轻量级线程池实践.md
+++ b/Read/ReadMeWiki/01.大型方案/04.轻量级线程池实践.md
@@ -24,6 +24,7 @@
     - 4.2 主和子线程通信
     - 4.3 使用静态代理模式
     - 4.4 处理不同线程池
+    - 4.5 阻塞队列的选择
     - 4.6 设置自定义Task
     - 4.7 线程池使用分析
 - 05.方案基础设计
@@ -103,7 +104,7 @@
 
 #### 2.3 线程池创建
 - 通过Executors的工厂方法获取这五种线程池，其实它的内部还是通过new ThreadPoolExecutor(…)的方式创建线程池的，具体可以看看源码，这里省略呢……
-    ``` 
+    ``` java
     ExecutorService fixedThreadPool = Executors.newFixedThreadPool(5);
     ExecutorService singleThreadPool = Executors.newSingleThreadExecutor();
     ExecutorService cachedThreadPool = Executors.newCachedThreadPool();
@@ -155,9 +156,21 @@
 
 ### 04.线程池封装思路
 #### 4.1 封装总体思路
+
+
 #### 4.2 主和子线程通信
+
+
+
 #### 4.3 使用静态代理模式
 - 静态代理理解和应用：AbsTaskExecutor(抽象类) + DefaultTaskExecutor(委托类) + DelegateTaskExecutor(代理类)
+- AbsTaskExecutor，定义TaskExecutor的功能，即在主线程/IO线程执行任务。
+- DefaultTaskExecutor，ArchTaskExecutor的默认代理类，当client没有手动设置delegate时，使用其执行任务。
+    - 使用了newFixedThreadPool的线程池模型。 创建一个定长线程池，可控制线程最大并发数，超出的线程会在队列中等待。源码设定最大并发数是4。postToMainThread时，mMainHandler初始化使用了双重效验锁。
+- DelegateTaskExecutor，实现了多个抽象方法，这里使用代理模式，实现后，执行全部转交给mDelegate，而此类也提供setDelegate的方法，允许client从外部提供一个TaskExecutor，这样设计的好处：
+    - 1.通过代理，实际的执行模型（如：DefaultTaskExecutor的ExecutorService）交给代理类实现，隐藏了实现细节。
+    - 2.给client比较高的自由度，客户端可以定义自己的TaskExecutor，从而定义实际的执行模型及队列等，也有利于方法埋点等操作。
+    - 另外，通过getMainThreadExecutor与getMainThreadExecutor静态方法将sMainThreadExecutor与sIOThreadExecutor暴露给外部，而sMainThreadExecutor与sIOThreadExecutor相当于一个适配器，将ArchTaskExecutor的任务执行转换成标准的Executor，并未暴露mDelegate中的ExecutorService。
 
 
 
@@ -167,6 +180,11 @@
 - 处理cpu密集任务
 
 
+#### 4.5 阻塞队列的选择
+- 1.ArrayBlockingQueue: 是一个基于数组结构的有界阻塞队列，此队列按 FIFO（先进先出）原则对元素进行排序。
+- 2.LinkedBlockingQueue: 一个基于链表结构的阻塞队列，此队列按FIFO （先进先出） 排序元素，吞吐量一般要高于ArrayBlockingQueue。静态工厂方法Executors.newFixedThreadPool()和newSingleThreadExecutor使用了这个队列
+- 3.SynchronousQueue: 一个不存储元素的阻塞队列。每一个插入操做必须等到另外一个线程调用移除操做，不然插入操做一直处于阻塞状态，吞吐量一般要高于LinkedBlockingQueue，静态工厂方法Executors.newCachedThreadPool使用了这个队列。
+- 4.PriorityBlockingQueue: 一个具备优先级的无限阻塞队列。 五、DelayedWorkQueue 任务是按照目标执行时间进行排序。
 
 
 #### 4.6 设置自定义Task
