--- a/Read/ReadMeWiki/01.大型方案/04.轻量级线程池实践.md
+++ b/Read/ReadMeWiki/01.大型方案/04.轻量级线程池实践.md
@@ -50,7 +50,7 @@
 
 #### 1.2 遇到问题
 - **一般开启线程的操作如下所示**
-    ``` 
+    ``` java
     new Thread(new Runnable() {
         @Override
         public void run() {
@@ -58,7 +58,7 @@
         }
     }).start();
     ``` 
-    - 创建了一个线程并执行，它在任务结束后GC会自动回收该线程。在线程并发不多的程序中确实不错，而假如这个程序有很多地方需要开启大量线程来处理任务，那么如果还是用上述的方式去创建线程处理的话，那么将导致系统的性能表现的非常糟糕。[博客](https://github.com/yangchong211/YCBlogs)
+    - 创建了一个线程并执行，它在任务结束后GC会自动回收该线程。在线程并发不多的程序中确实不错，而假如这个程序有很多地方需要开启大量线程来处理任务，那么如果还是用上述的方式去创建线程处理的话，那么将导致系统的性能表现的非常糟糕。
 - **主要的弊端有这些，可能总结并不全面**
     - 大量的线程创建、执行和销毁是非常耗cpu和内存的，这样将直接影响系统的吞吐量，导致性能急剧下降，如果内存资源占用的比较多，还很可能造成OOM
     - 大量的线程的创建和销毁很容易导致GC频繁的执行，从而发生内存抖动现象，而发生了内存抖动，对于移动端来说，最大的影响就是造成界面卡顿
@@ -67,29 +67,29 @@
 
 
 #### 1.3 基础概念介绍
-- 线程池好处：
-    - 1）降低资源消耗；
-    - 2）提高相应速度；
-    - 3）提高线程的可管理性
-- 线程池的实现原理：
-    - 当提交一个新任务到线程池时，判断核心线程池里的线程是否都在执行。如果不是，则创建一个新的线程执行任务。如果核心线程池的线程都在执行任务，则进入下个流程。
-    - 判断工作队列是否已满。如果未满，则将新提交的任务存储在这个工作队列里。如果工作队列满了，则进入下个流程。
-    - 判断线程池是否都处于工作状态。如果没有，则创建一个新的工作线程来执行任务。如果满了，则交给饱和策略来处理这个任务。
+- 线程池如何降低系统资源消耗？通过重用已存在的线程，降低线程创建和销毁造成的消耗，其核心就是线程的复用机制
+- 线程池提高系统响应速度？当有任务到达时，无需等待新线程的创建便能立即执行
+- 线程池如何管控并发数？线程若是无限制的创建，不仅会额外消耗大量系统资源，更是占用过多资源而阻塞系统或oom等状况，从而降低系统的稳定性。线程池能有效管控线程，统一分配、调优，提供资源使用率；
+- 线程池还有什么功能？线程池提供了定时、定期以及可控线程数等功能的线程池，使用方便简单。
 
 
 #### 1.4 设计目标
+- 打造一个轻量级线程池工具，支持多种使用场景。比如执行核心任务，执行cpu类型任务，执行io类型任务，可以随意切换。
+- 简化handler处理消息，可以处理主线程或者子线程消息。同时支持使用HandlerThread处理大量消息逻辑，比如轮训操作。
 
 
 #### 1.5 产生收益分析
+- 
 
 
 ### 02.线程池基础知识
 #### 2.1 为何有线程池
-- 使用线程池管理线程优点
-    - ①降低系统资源消耗，通过重用已存在的线程，降低线程创建和销毁造成的消耗；
-    - ②提高系统响应速度，当有任务到达时，无需等待新线程的创建便能立即执行；
-    - ③方便线程并发数的管控，线程若是无限制的创建，不仅会额外消耗大量系统资源，更是占用过多资源而阻塞系统或oom等状况，从而降低系统的稳定性。线程池能有效管控线程，统一分配、调优，提供资源使用率；
-    - ④更强大的功能，线程池提供了定时、定期以及可控线程数等功能的线程池，使用方便简单。
+- 线程池好处：
+    - 1）降低资源消耗；2）提高相应速度；3）提高线程的可管理性；4）可以提供定时定期可控线程数量等功能
+- 线程池的实现原理：
+    - 当提交一个新任务到线程池时，判断核心线程池里的线程是否都在执行。如果不是，则创建一个新的线程执行任务。如果核心线程池的线程都在执行任务，则进入下个流程。
+    - 判断工作队列是否已满。如果未满，则将新提交的任务存储在这个工作队列里。如果工作队列满了，则进入下个流程。
+    - 判断线程池是否都处于工作状态。如果没有，则创建一个新的工作线程来执行任务。如果满了，则交给饱和策略来处理这个任务。
 
 
 #### 2.2 如何管理线程
