--- a/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/16.通用缓存设计实践.md
@@ -1,5 +1,5 @@
 #### 目录介绍
-- 01.整体概述
+- 01.整体概述说明
     - 1.1 项目背景介绍
     - 1.2 遇到问题
     - 1.3 基础概念介绍
@@ -8,7 +8,7 @@
 - 02.市面存储方案
     - 2.1 缓存存储有哪些
     - 2.2 缓存策略有哪些
-    - 2.3 存储该如何选择
+    - 2.3 常见存储方案
     - 2.4 存储方案优缺点
     - 2.6 存储如何优化
     - 2.7 使用缓存注意点
@@ -57,11 +57,18 @@
     - 8.4 参考链接
 
 
-### 01.整体概述
+
+### 01.整体概述说明
 #### 1.1 项目背景介绍
+- 项目中很多地方使用缓存方案，有的用sp，有的用mmkv，有的用lru，有的用DataStore，有的用sqlite，如何打造通用api切换操作不同存储方案？缓存方案众多，且各自使用场景有差异，如何选择合适的缓存方式？
+- 针对不同的业务场景，不同的缓存方案。打造一套通用的方案，屏蔽各种缓存方式的差异性，暴露给外部开发者统一的API，简化使用，提高开发效率和使用效率……
 
 
 #### 1.2 遇到问题
+- 问题1：各种缓存方案，分别是如何保证数据安全的，其内部使用到了哪些锁？由于引入锁，给效率上带来了什么影响？
+- 问题2：各种缓存方案，进程不安全是否会导致数据丢失，如何处理数据丢失情况？如何处理脏数据，其原理大概是什么？
+- 问题3：各种缓存方案使用场景是什么？有什么缺陷，为了解决缺陷做了些什么？比如sp存在缺陷的替代方案是DataStore，为何这样？
+- 问题4：各种缓存方案，他们的缓存效率是怎样的？如何对比？接入该库后，如何做数据迁移，如何覆盖操作？
 
 
 #### 1.3 基础概念介绍
@@ -69,16 +76,13 @@
 - 缓存容量，就是缓存的大小，到达这个限度以后，那么就须要进行缓存清理了框架。这个时候就需要删除一些旧的缓存并添加新的缓存。
 
 
-
 #### 1.4 设计目标
-- 打造通用存储库
-    - 设计一个缓存通用方案，其次，它的结构需要很简单，因为很多地方需要用到，再次，它得线程安全。灵活切换不同的缓存方式，使用简单。
-- 内部开源该库
-    - 作为技术沉淀，当作专项来推动进展。高复用低耦合，便于拓展，可快速移植，解决各个项目使用内存缓存，sp，mmkv，sql，lru的凌乱。抽象一套统一的API接口。
-
+- 打造通用存储库：设计一个缓存通用方案，其次，它的结构需要很简单，因为很多地方需要用到，再次，它得线程安全。灵活切换不同的缓存方式，使用简单。
+- 内部开源该库：作为技术沉淀，当作专项来推动进展。高复用低耦合，便于拓展，可快速移植，解决各个项目使用内存缓存，sp，mmkv，sql，lru，DataStore的凌乱。抽象一套统一的API接口。
 
 
 #### 1.5 产生收益分析
+- 统一缓存API兼容不同存储方案：打造通用api，抹平了sp，mmkv，sql，lru，dataStore等各种方案的差异性。简化开发者使用
 
 
 ### 02.市面存储方案
@@ -98,19 +102,11 @@
 
 
 
-
-
-#### 2.3 存储该如何选择
+#### 2.3 常见存储方案
 - 内存缓存：存储在内存中，如果对象销毁则内存也会跟随销毁。如果是静态对象，那么进程杀死后内存会销毁。
-    - Map
-    - LruCache
+    - Map，LruCache
 - 磁盘缓存：后台应用有可能会被杀死，那么相应的内存缓存对象也会被销毁。当你的应用重新回到前台显示时，你需要用到缓存数据时，这个时候可以用磁盘缓存。
-    - SharedPreferences
-    - MMKV
-    - DiskLruCache
-    - SqlLite
-- 还有一些其他开源缓存库
-    - ACache
+    - SharedPreferences，MMKV，DiskLruCache，SqlLite，DataStore，ACache，Room
 
 
 #### 2.4 存储方案优缺点
@@ -118,16 +114,21 @@
     - Map：内存缓存，一般用HashMap存储一些数据，主要存储一些临时的对象
     - LruCache：内存淘汰缓存，内部使用LinkedHashMap，会淘汰最长时间未使用的对象
 - 磁盘缓存
-    - SharedPreferences：轻量级磁盘存储，一般存储配置属性，线程安全
+    - SharedPreferences：轻量级磁盘存储，一般存储配置属性，线程安全。
     - MMKV：腾讯开源存储库，内部采用mmpv
     - DiskLruCache：磁盘淘汰缓存，写入数据到file文件
     - SqlLite：移动端轻量级数据库
+    - DataStore：旨在替代原有的 SharedPreferences，支持SharedPreferences数据的迁移
+    - Room：支持大型或复杂数据集
 - 其他开源缓存库
     - ACache：一款高效二级存储库，采用内存缓存和磁盘缓存
 
 
 
 #### 2.6 存储如何优化
+- 针对SharedPreferences优化有：
+    - 它设计初衷是轻量级，当存储文件中key-value数据超过30个，如果超过30个，则开辟一个新的文件进行存储。建议不同业务模块的数据分文件存储……
+
 
 
 
@@ -146,7 +147,8 @@
     - 不支持跨进程通讯，由于每次都会把整个文件加载到内存中，不建议存储大的文件内容，比如大json。
 - 有一些使用上的建议如下
     - 建议不要存储较大数据；频繁修改的数据修改后统一提交而不是修改过后马上提交；在跨进程通讯中不去使用；键值对不宜过多
-
+- 读写操作性能分析
+    - 第一次通过`Context.getSharedPreferences()`进行初始化时，对`xml`文件进行一次读取，并将文件内所有内容（即所有的键值对）缓到内存的一个`Map`中，接下来所有的读操作，只需要从这个`Map`中取就可以
 
 
 
