--- a/Read/ReadMeWiki/00.方案实践/08.App网络优化实践.md
+++ b/Read/ReadMeWiki/00.方案实践/08.App网络优化实践.md
@@ -34,7 +34,8 @@
     - 稳定性。UDP 协议，无状态，容易域名劫持（难复现、难定位、难解决），每天至少几百万个域名被劫持，一年至少十次大规模事件。
     - 准确性。LocalDNS 调度经常出现不准确，比如北京的用户调度到广东 IP，移动的运营商调度到电信的 IP，跨运营商调度会导致访问慢，甚至访问不了。
     - 及时性。运营商可能会修改 DNS 的 TTL，导致 DNS 修改生效延迟。不同运营商的服务实现不一致，我们也很难保证 DNS 解析的耗时。
-- 为了解决这些问题，就有了 HTTPDNS。简单来说自己做域名解析的工作，通过 HTTP 请求后台去拿到域名对应的 IP 地址，直接解决上述所有问题。
+- 为了解决这些问题，就有了 HTTPDNS。
+    - 简单来说自己做域名解析的工作，通过 HTTP 请求后台去拿到域名对应的 IP 地址，直接解决上述所有问题。
 - 具体可以参考：
     - [百度DNS优化](https://mp.weixin.qq.com/s/iaPtSF-twWz-AN66UJUBDg)
 
