--- a/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
+++ b/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
@@ -1,6 +1,6 @@
 #### 目录介绍
 - 01.整体概述
-    - 1.1 项目背景
+    - 1.1 项目背景说明
     - 1.2 遇到问题
     - 1.3 基础概念介绍
     - 1.4 设计目标
@@ -8,8 +8,9 @@
 - 02.日志存储设计思路
     - 2.1 使用跨进程写日志
     - 2.2 选择Service通信
-    - 2.3 组装log日志设计
-    - 2.4 日志文件创建机制
+    - 2.3 日志文件路径设置
+    - 2.4 组装log日志设计
+    - 2.5 日志文件创建机制
     - 2.6 日志缓存的策略
     - 2.9 多进程存储问题
 - 03.关键技术点说明
@@ -44,10 +45,18 @@
 
 
 ### 01.整体概述
-#### 1.1 项目背景
+#### 1.1 项目背景说明
+
+
 #### 1.2 遇到问题
+
+
 #### 1.3 基础概念介绍
+
+
 #### 1.4 设计目标
+
+
 #### 1.5 产生收益分析
 
 
@@ -64,16 +73,19 @@
     - 该服务是独立的进程，对应进程名格式为所在包名加指定的android:process字符串。由于是独立的进程，因此在Activity所在进程被Kill的时候，该服务依然在运行，不受其他进程影响，有利于为多个进程提供服务具有较高的灵活性。缺点是该服务是独立的进程，会占用一定资源，并且使用AIDL进行IPC稍微麻烦一点。
 - 使用Service服务技术选择
     - 如果只是想开个服务在后台运行的话，直接startService即可；如果需要相互之间进行传值或者操作的话，就应该通过bindService。
-- 需要注意的点有哪些
-    - Service是在主线程里执行操作的，可能会因为执行耗时操作而导致ANR。如果是跨进程传输，则需要注意读写耗时
+    - 需要注意的点有哪些：Service是在主线程里执行操作的，可能会因为执行耗时操作而导致ANR。如果是跨进程传输，则需要注意读写耗时。
+
+
+#### 2.3 日志文件路径设置
+- 首先给客户端设置路径，然后在通过aidl跨进程传递给服务端。
 
 
 
+#### 2.4 组装log日志设计
 
-#### 2.3 组装log日志设计
 
 
-#### 2.4 日志文件创建机制
+#### 2.5 日志文件创建机制
 
 
 
@@ -101,6 +113,7 @@
 
 #### 3.7 日志自动清除操作
 
+
 #### 3.9 遇到的一些问题
 - 跨进程启动Service无效
     - 在manifest注册的时候加了process属性，然后就无法启动了，去掉就可以正常启动的？
@@ -127,8 +140,6 @@
 #### 4.3 移动端使用mmap
 - 对于移动端日志采集SDK来说
     - 主要进行的工作就是将用户写入的数据保存到文件中，在这个过程中涉及到在native层调用mmap函数实现在进程虚拟内存地址空间中分配地址空间，创建和物理内存的映射关系。
-
-
 
 
 #### 4.4 XLog介绍
