--- a/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
+++ b/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
@@ -14,6 +14,7 @@
     - 2.6 日志缓存的策略
     - 2.9 多进程存储问题
 - 03.关键技术点说明
+    - 3.1 aidl接口定义
     - 3.2 跨进程启动服务
     - 3.3 跨进程传输日志
     - 3.4 日志写入操作
@@ -78,6 +79,7 @@
 
 #### 2.3 日志文件路径设置
 - 首先给客户端设置路径，然后在通过aidl跨进程传递给服务端。
+    - 这里面需要注意，在bind绑定service后，在onServiceConnected连接上之后，调用IxxService.Stub.asInterface(IBinder obj) 即可得到一个IxxService实例，即客户端这边通过实例调用接口(aidl)中方法传递路径
 
 
 
@@ -96,6 +98,12 @@
 
 
 ### 03.关键技术点说明
+#### 3.1 aidl接口定义
+- aidl接口是如何定义？
+- 定义后aidl接口如何编译生成.java文件？
+
+
+
 #### 3.2 跨进程启动服务
 
 
