--- a/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
+++ b/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
@@ -63,8 +63,17 @@
 
 ### 02.日志存储设计思路
 #### 2.1 使用跨进程写日志
-- 跨进程通信目前有哪些
-    - aidl
+- 使用Intent
+    - Activity，Service，Receiver 都支持在 Intent 中传递 Bundle 数据，而 Bundle 实现了 Parcelable 接口，可以在不同的进程间进行传输。
+- 使用文件共享
+    - 可以在一个进程中序列化一个对象到文件系统中，在另一个进程中反序列化恢复这个对象（**注意**：并不是同一个对象，只是内容相同。）
+- 使用Messenger
+    - Messenger 是一种轻量级的 IPC 方案，它的底层实现是 AIDL ，可以在不同进程中传递 Message 对象，它一次只处理一个请求，在服务端不需要考虑线程同步的问题，服务端不存在并发执行的情形。
+- 使用AIDL
+    - 服务端，创建Service
+    - 客户端，
+- 使用ContentProvider
+- 使用Socket
 
 
 #### 2.2 选择Service通信
