--- a/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
+++ b/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
@@ -70,9 +70,10 @@
 - 使用Messenger
     - Messenger 是一种轻量级的 IPC 方案，它的底层实现是 AIDL ，可以在不同进程中传递 Message 对象，它一次只处理一个请求，在服务端不需要考虑线程同步的问题，服务端不存在并发执行的情形。
 - 使用AIDL
-    - 服务端，创建Service
-    - 客户端，
+    - 服务端，创建Service用于监听客户端的连接请求，
+    - 客户端，先绑定服务端Service，绑定成功后，将服务端返回的Binder对象转换成AIDL接口所属的类型，最后调用AIDL的方法就可以了。
 - 使用ContentProvider
+    - 许多如通讯录、公共相册、日程表，需要跨进程访问。使用方法：继承 ContentProvider 类实现抽象方法，除 onCreate 运行在主线程里，其他五个方法均由外界回调运行在 Binder 线程池中。ContentProvider 的底层数据，可以是 SQLite 数据库，可以是文件，也可以是内存中的数据。
 - 使用Socket
 
 
@@ -134,6 +135,9 @@
 #### 3.9 遇到的一些问题
 - 跨进程启动Service无效
     - 在manifest注册的时候加了process属性，然后就无法启动了，去掉就可以正常启动的？
+- 客户端在
+    - 客户端调用远程服务的方法，被调用的方法运行在服务端的 Binder 线程池中，同时客户端的线程会被挂起，如果服务端方法执行比较耗时，就会导致客户端线程长时间阻塞，导致 ANR 。客户端的 onServiceConnected 和 onServiceDisconnected 方法都在 UI 线程中。
+
 
 
 ### 04.使用高效日志库
@@ -207,6 +211,8 @@
 
 
 #### 6.5 异常设计
+
+
 
 
 ### 07.其他说明介绍
