--- a/Read/ReadShareWiki/07.底层思维/02.自我自控的调节.md
+++ b/Read/ReadShareWiki/07.底层思维/02.自我自控的调节.md
@@ -1,8 +1,7 @@
 #### 目录介绍
 - 01.自控能力的构成
 - 02.自控力两大基石
-- 03.做到及时的提醒
-- 04.什么是延迟满足
+- 03.自控力有效途径
 - 04.要懂得学会等待
 - 05.精妙的休息艺术
 - 06.转变下思维模式
@@ -14,40 +13,36 @@
 
 
 ### 01.自控能力的构成
-- 自控能力的3大维度分别为：控制自己的情绪、控制自己的欲望和控制自己的行为。
-- 如何控制自己的欲望和控制自己的行为。很多自己想做却跟我们的规则相背离的事情，也会有很多控制不住就是想做的事情。
-- 自控力要不断地培养，就像肌肉一样，越早进行锻炼，就能越好地掌握自控力，“自律让我更自由”就是这个道理。
+- 自控能力的3大维度分别为：控制自己的情绪、控制自己的欲望和控制自己的行为。所谓控制意志力，就是控制自己的注意力，情绪和欲望的能力。
+- 自控就是自我控制的能力，即能够完全自觉地、有意识地控制自己的情绪，支配自己行动的能力，是个人意志力与情商的重要体现。
+- 如何控制欲望和控制行为？很多自己想做却跟规则相背离的事情，也会有很多控制不住就是想做的事情。自控力要不断地培养，就像肌肉一样，越早进行锻炼，就能越好地掌握自控力，“自律让我更自由”就是这个道理。
 
 
 
 ### 02.自控力两大基石
 #### 2.1 言传身教
-- 言传身教：如果这些是要求别人做到的，你自己能否先做到？如同在公司里，你要求大家上班不迟到，那么你自己能否做到不迟到。
+- 如果这些是要求别人做到的，你自己能否先做到？如同在公司里，你要求大家上班不迟到，那么你自己能否做到不迟到。
 - 如果有些规则你自己都没做到却要求别人，他们慢慢地会对你说的话不当一回事，对一些规则也不放在心上。
 
 
 #### 2.2 信守承诺
-- 信守承诺：为什么信守承诺对自控力特别重要？有一个实验叫“棉花糖实验”：实验者找来一些学生，跟他们说：“我现在要离开房间15分钟，如果你现在不吃棉花糖，我待会儿回来的时候，还会再给你一块棉花糖。”设计实验的心理学家发现，自控力或者拥有延迟享乐能力，是决定学生未来成就的关键。
+- 为什么信守承诺对自控力特别重要？有一个实验叫“棉花糖实验”：实验者找来一些学生，跟他们说：“我现在要离开房间15分钟，如果你现在不吃棉花糖，我待会儿回来的时候，还会再给你一块棉花糖。”设计实验的心理学家发现，自控力或者拥有延迟享乐能力，是决定学生未来成就的关键。
 
 
-
-### 03.做到及时的提醒
-- 常常会抱怨：“明明刚讲完道理，也答应了，但遇到事情又不遵守约定了，这是自控力差吗？”。最经典的表现是，“开始讲道理能明白，也答应了；后来事情发生了，又不干了”。
-
-
-
-### 04.什么是延迟满足
-- 延迟满足是什么，态度？方法？还是价值观？我觉得是价值观。你怎么看待自己的付出和收获，怎么看待自己的职场和事业的发展。
-- 网上有很多文章，讲为什么懂得延迟满足的人更容易成功，以及如何训练孩子学会延迟满足。随便搜一搜就很多，有自制力，能够克制，延迟满足的人更容易成功，而急于变现，急于兑现的人则会失去很多更好的机会。
-
+### 03.自控力有效途径
+- 提高自控力的最有效途径在于，弄清自己如何失控，为何失控。自知之明是自控的基础，认识到自己的意志力存在问题，则是自控的关键。
+- 自控主要表现在两个方面：一是约束、规范自己的行为，迫使自己去做该做的事情；二是善于抑制自己的欲望，让理性战胜情感。
+- “我要做”意志力挑战：有没有什么事情是你想多做一些的，或是停止拖延的，因为你知道这样做能提高你的生活质量？
+- “我不要”意志力挑战：你生活中最“顽固”的习惯是什么？有 什么使你想放弃，或者想少做一点儿的，因为它妨害了你的健康、幸福甚至成功？
+- “我想要”意志力挑战：你最想集中精力完成那一项重要的长远目标？那种当下的“渴望”最有可能分散你的注意力、诱惑你远离自己的目标？
+- 自我控制就是驾驭“我要做”、“我不要”和“我想要”这三种力量。无论从哪个方面看，能够更好地控制自己的注意力、情绪和行为的人，都会活得更幸福。
 
 
 ### 04.要懂得学会等待
+- 延迟满足是什么，态度？方法？还是价值观？我觉得是价值观。你怎么看待自己的付出和收获，怎么看待自己的职场和事业的发展。
+- 网上有很多文章，讲为什么懂得延迟满足的人更容易成功，以及如何训练孩子学会延迟满足。随便搜一搜就很多，有自制力，能够克制，延迟满足的人更容易成功，而急于变现，急于兑现的人则会失去很多更好的机会。
 - 关于提高自控力，有一个迷思：很多人一提到提高自控力，想到的是延迟满足。而我更喜欢学会等待，而不是延迟满足。这当中是有细微差别的：学会等待，是在自然的情况下发生的；延迟满足，是我们刻意创造的、不自然的环境。
 - “延迟满足”和“学会等待”，什么叫刻意、什么叫自然？其中最大的区别。刻意，是无视情绪，是为了训练而训练；而自然，是接纳情绪，但是会引导和制止自己的行为。
-
-
-
 
 
 ### 05.精妙的休息艺术
