--- a/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
+++ b/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
@@ -6,7 +6,7 @@
     - 1.4 设计目标
     - 1.5 产生收益分析
 - 02.日志存储设计思路
-    - 2.1 使用跨进程写日志
+    - 2.1 使用跨进程通信
     - 2.2 选择Service通信
     - 2.3 日志文件路径设置
     - 2.4 组装log日志设计
@@ -14,7 +14,7 @@
     - 2.6 日志缓存的策略
     - 2.9 多进程存储问题
 - 03.关键技术点说明
-    - 3.1 aidl接口定义
+    - 3.1 aidl通信步骤
     - 3.2 跨进程启动服务
     - 3.3 跨进程传输日志
     - 3.4 日志写入操作
@@ -70,11 +70,10 @@
 - 使用Messenger
     - Messenger 是一种轻量级的 IPC 方案，它的底层实现是 AIDL ，可以在不同进程中传递 Message 对象，它一次只处理一个请求，在服务端不需要考虑线程同步的问题，服务端不存在并发执行的情形。
 - 使用AIDL
-    - 服务端，创建Service用于监听客户端的连接请求，
+    - 服务端，创建Service用于监听客户端的连接请求，然后创建一个AIDL接口文件，里面是将要实现的方法，注意这个方法是暴露给客户端的的，**在Service中实现这个AIDL接口即可**。
     - 客户端，先绑定服务端Service，绑定成功后，将服务端返回的Binder对象转换成AIDL接口所属的类型，最后调用AIDL的方法就可以了。
 - 使用ContentProvider
     - 许多如通讯录、公共相册、日程表，需要跨进程访问。使用方法：继承 ContentProvider 类实现抽象方法，除 onCreate 运行在主线程里，其他五个方法均由外界回调运行在 Binder 线程池中。ContentProvider 的底层数据，可以是 SQLite 数据库，可以是文件，也可以是内存中的数据。
-- 使用Socket
 
 
 #### 2.2 选择Service通信
@@ -108,9 +107,18 @@
 
 
 ### 03.关键技术点说明
-#### 3.1 aidl接口定义
-- aidl接口是如何定义？
-- 定义后aidl接口如何编译生成.java文件？
+#### 3.1 aidl通信步骤
+- 服务端
+    - 步骤1：新建定义AIDL文件，并声明该服务需要向客户端提供的接口。补充，如果aidl中有对象，则需要创建对象，并且实现Parcelable
+    - 步骤2：在Service子类中实现AIDL中定义的接口方法，并定义生命周期的方法（onCreat、onBind()、blabla）
+    - 步骤3：在AndroidMainfest.xml中注册服务 & 声明为远程服务
+- 客户端
+    - 步骤1：拷贝服务端的AIDL文件到目录下
+    - 步骤2：使用Stub.asInterface接口获取服务器的Binder，根据需要调用服务提供的接口方法
+    - 步骤3：通过Intent指定服务端的服务名称和所在包，绑定远程Service
+- 遇到一些问题
+    - aidl接口是如何定义？
+    - 定义后aidl接口如何编译生成.java文件？
 
 
 
