--- a/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
+++ b/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
@@ -109,16 +109,22 @@
 ### 03.关键技术点说明
 #### 3.1 aidl通信步骤
 - 服务端
-    - 步骤1：新建定义AIDL文件，并声明该服务需要向客户端提供的接口。补充，如果aidl中有对象，则需要创建对象，并且实现Parcelable
-    - 步骤2：在Service子类中实现AIDL中定义的接口方法，并定义生命周期的方法（onCreat、onBind()、blabla）
-    - 步骤3：在AndroidMainfest.xml中注册服务 & 声明为远程服务
+    - 步骤1：新建定义AIDL文件【特别注意包名保持一致】，并声明该服务需要向客户端提供的接口。补充，如果aidl中有对象，则需要创建对象，并且实现Parcelable
+    - 步骤2：在Service子类中实现AIDL中定义的接口方法，并定义生命周期的方法
+    - 步骤3：在AndroidManifest.xml中注册服务 & 声明为远程服务
 - 客户端
-    - 步骤1：拷贝服务端的AIDL文件到目录下
+    - 步骤1：拷贝服务端的AIDL文件到目录下【需要把service端所有的aidl都拷贝到client来】
     - 步骤2：使用Stub.asInterface接口获取服务器的Binder，根据需要调用服务提供的接口方法
     - 步骤3：通过Intent指定服务端的服务名称和所在包，绑定远程Service
 - 遇到一些问题
     - aidl接口是如何定义？
     - 定义后aidl接口如何编译生成.java文件？
+    - aidl通信是单向还是双向？单向通信，客户端
+    - 其他注意点：注意的是需要先启动service端的apk，在启动client端的apk
+- 不同的场景
+    - 场景一、service 和 client 在同一个 project 中。service项目可以直接依赖client项目
+    - 场景二、service 和 client 分属于不同的 project 中。将service项目中的 aidl 文件夹原封不动的拷贝到client项目中的对应位置
+
 
 
 
@@ -231,7 +237,10 @@
     - https://tech.meituan.com/2018/10/11/logan-open-source.html
 - Android跨进程启动Service流程及常见问题
     - https://blog.csdn.net/One_Month/article/details/80255893
-
+- Android进阶——AIDL详解
+    https://blog.csdn.net/ly0724ok/article/details/117450121/
+- Android中AIDL使用案例
+    - https://www.jianshu.com/p/b174f14a2d2f
 
 
 
