--- a/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
+++ b/Read/ReadMeWiki/01.大型方案/22.日志打印和存储实践.md
@@ -119,7 +119,7 @@
 - 遇到一些问题
     - aidl接口是如何定义？
     - 定义后aidl接口如何编译生成.java文件？
-    - aidl通信是单向还是双向？单向通信，客户端
+    - aidl通信是单向还是双向？单向通信，客户端调
     - 其他注意点：注意的是需要先启动service端的apk，在启动client端的apk
 - 不同的场景
     - 场景一、service 和 client 在同一个 project 中。service项目可以直接依赖client项目
