--- a/Read/ReadMeWiki/01.大型方案/25.App基类库封装实践.md
+++ b/Read/ReadMeWiki/01.大型方案/25.App基类库封装实践.md
@@ -55,7 +55,7 @@
 - ViewPager2如何实现局部刷新操作？
     - RecyclerView基于DiffUtil可以实现局部更新，FragmentStateAdapter也可以对Fragment实现局部更新。
 - ViewPager2预加载说明
-    - 1
+    - 建议：如果页面具有复杂的布局，您应该将这个限制保持在较低的水平。
 - ViewPager2遇到的坑
     - 在FragmentStateAdapter中有一个带有多个片段的viewpager2，每当我尝试打开一个新片段，然后使用viewpager2返回到当前片段时，都会出现异常。Expected the adapter to be 'fresh' while restoring state.
 
