--- a/Read/Management/01.管理转变/01.管理到底做什么.md
+++ b/Read/Management/01.管理转变/01.管理到底做什么.md
@@ -18,8 +18,8 @@
 ### 02.了解大佬说管理
 - 不妨碍我们先了解一下，管理学历史上的几位泰斗人物是怎么理解“管理”的。
 - 古典管理理论的代表人物亨利·法约尔认为，“管理是由五项要素组成的一种普遍的人类活动，这五个要素是：计划、组织、指挥、协调和控制。”由此可以看出他特别关注管理的过程性，强调“做事”，不愧为“管理过程学派”的创始人。
-- “科学管理之父”弗雷德里克·泰勒认为，“管理就是确切地知道你要别人干什么，并使他用最好的方法去干。”他关注的焦点在于干什么，以及怎么干，有明显的目标性和方法性，强调“目标”和“做事”。
-- “现代管理学之父”彼得·德鲁克认为，“管理是一种实践，其本质不在于‘知’，而在于‘行’；其验证不在于逻辑，而在于成果。其唯一权威就是成就。”他这个说法的焦点在于实践性和结果性。众所周知，德鲁克是“目标管理理论”的创始人，尤其强调“目标”。
+- 科学管理之父弗雷德里克·泰勒认为，“管理就是确切地知道你要别人干什么，并使他用最好的方法去干。”他关注的焦点在于干什么，以及怎么干，有明显的目标性和方法性，强调“目标”和“做事”。
+- 现代管理学之父彼得·德鲁克认为，“管理是一种实践，其本质不在于‘知’，而在于‘行’；其验证不在于逻辑，而在于成果。其唯一权威就是成就。”这个说法的焦点在于实践性和结果性。众所周知，德鲁克是“目标管理理论”的创始人，尤其强调“目标”。
 
 
 
