--- a/Read/Management/01.管理转变/02.小白快速带团队.md
+++ b/Read/Management/01.管理转变/02.小白快速带团队.md
@@ -12,15 +12,21 @@
 
 
 ### 02.新晋者面临问题
-- 新晋管理者面临的一个非常大的问题就是不知道要做什么。有的人可能自己去看一些管理的书籍进行学习，但是对于学习的内容是否正确，是否适合当前团队其实也是心存疑虑。其实，无论你采用谁的管理方法，变化的只是理念和技巧，管理的工作范畴本身是不变的。
-
+- 新晋管理者面临的一个非常大的问题就是不知道要做什么。有的人可能自己去看一些管理的书籍进行学习，但是对于学习的内容是否正确，是否适合当前团队其实也是心存疑虑。
+- 其实，无论你采用谁的管理方法，变化的只是理念和技巧，管理的工作范畴本身是不变的。
 
 
 ### 03.何为管理四象限
 - 管理四象限的整体思路是，从管理的手段和范围来进行拆解，手段有两类，管和理，范围有两个，人和事，它们组合就得到了四个象限。
-- “管”有一定的“强制”含义，可以形象的理解为从上往下压；“理”有一定的“辅助”含义，可以形象的理解为从下往上托，两个手段缺一不可。如果你只“管”不“理”，就是把团队当成你往上爬的工具和台阶，这样团队的凝聚力往往不高，人心不太稳定；如果你只“理”不“管”，团队做事很可能就没有章法，战斗力往往不高。
-- “人”就是团队的成员，管理就是想方设法发挥出人最大的潜能；“事”就是团队要做的事情，管理就是想方设法带领团队为公司创造最大的价值，拿到更好的结果，这也是晋升原则中“价值原则”的一个体现。
 
+
+#### 3.1 管和理
+- “管”有一定的“强制”含义，可以形象的理解为从上往下压；“理”有一定的“辅助”含义，可以形象的理解为从下往上托，两个手段缺一不可。
+- 如果你只“管”不“理”，就是把团队当成你往上爬的工具和台阶，这样团队的凝聚力往往不高，人心不太稳定；如果你只“理”不“管”，团队做事很可能就没有章法，战斗力往往不高。
+
+
+#### 3.2 人和事
+- “人”就是团队成员，管理就是想方设法发挥出人最大的潜能；“事”就是团队要做的事情，管理就是想方设法带领团队为公司创造最大的价值，拿到更好结果，这也是“价值原则”的一个体现。
 
 
 ### 04.四象限一之管事
@@ -28,15 +34,12 @@
 
 
 #### 4.1 团队规划
-- 团队规划是指，制定团队一定周期内的目标和主要事项。
-- 通常情况下，P9 以下的管理者需要基于上级管理者的规划以及团队自己的情况，制定半年或者一年规划。这对于新晋管理者来说是最大的一项挑战，具体规划方法可以参考OKR 规划法。
-
-
+- 团队规划是指，制定团队一定周期内的目标和主要事项。通常情况下，管理者需要基于上级管理者的规划以及团队自己的情况，制定半年或者一年规划。
+- 这对于新晋管理者来说是最大的一项挑战，具体规划方法可以参考OKR规划法。
 
 
 #### 4.2 团队执行
-- 团队执行是指，将团队规划的事项落地，包括人力安排、时间安排、进度跟踪和问题处理等。有的事项需要管理者亲自执行，有的需要安排骨干人员执行，但不管由谁来执行，管理者都是最终结果的第一责任人。具体执行方法可以参考3C 方案设计法和 PDCA 执行法。
-
+- 团队执行是指，将团队规划的事项落地，包括人力安排、时间安排、进度跟踪和问题处理等。有的事项需要管理者亲自执行，有的需要安排骨干人员执行，但不管由谁来执行，管理者都是最终结果的第一责任人。
 
 
 #### 4.3 团队汇报
@@ -49,13 +52,13 @@
 
 
 #### 5.1 团队构建
-- 团队构建是指，如何打造符合业务发展需要的团队。很多人有一个错误的认知：团队构建就是把 Head Count 招满，HC不够就招聘，有人离职就补招。实际上，招聘只是团队构建的一部分工作，人员优化、人员汰换和团队梯队设计这些事情也很重要，你需要持续不断地对团队进行打磨。
-
+- 团队构建是指，如何打造符合业务发展需要的团队。很多人有一个错误的认知：团队构建就是把 Head Count 招满，HC不够就招聘，有人离职就补招。
+- 实际上，招聘只是团队构建的一部分工作，人员优化、人员汰换和团队梯队设计这些事情也很重要，你需要持续不断地对团队进行打磨。
 
 
 #### 5.2 团队运作
-- 团队运作是指，通过制定团队的标准流程和奖惩机制等，让团队成员做事更加规范、更有效率。
-- 不同的团队有不同的特点，你可以结合自己团队的情况来补充一些团队内部的流程机制，但是要注意两点：一是不要盲目学习其他公司的方法，比如华为管理法、谷歌管理法，因为它们本身可能和公司层面的机制是冲突的。二是不要盲目地搞“新官上任三把火”，因为任何管理措施都是有成本的，不是越多越好，不合理的措施不但不能体现水平，反而会得不偿失，搞得怨声载道。
+- 团队运作是指，通过制定团队的标准流程和奖惩机制等，让团队成员做事更加规范、更有效率。不同的团队有不同的特点，可以结合自己团队的情况来补充一些团队内部的流程机制。
+- 但是要注意两点：一是不要盲目学习其他公司的方法，比如华为管理法、谷歌管理法，因为它们本身可能和公司层面的机制是冲突的。二是不要盲目地搞“新官上任三把火”，因为任何管理措施都是有成本的，不是越多越好，不合理的措施不但不能体现水平，反而会得不偿失，搞得怨声载道。
 
 
 #### 5.3 团队考核
@@ -67,10 +70,8 @@
 - 理事包括三个部分，风险管理、问题处理和资源协调。
 
 
-
 #### 6.1 风险管理
-- 风险管理是指，提前识别可能出现的问题，并采取预防措施。
-- P9 以下的管理者需要关注的风险主要有两类：一类是核心人员流失，它导致很多重要工作无法开展，所以你需要提前培养核心人员的备份人员，搭建合理的团队梯度。另一类是项目进度太紧，它导致质量低下、团队士气低下和团队摩擦增多等问题，你可以通过提前招聘、借调人员和据理力争修改项目计划或者项目范围等方式来应对。
+- 风险管理是指，提前识别可能出现的问题，并采取预防措施。管理者需要关注的风险主要有两类：一类是核心人员流失，它导致很多重要工作无法开展，所以你需要提前培养核心人员的备份人员，搭建合理的团队梯度。另一类是项目进度太紧，它导致质量低下、团队士气低下和团队摩擦增多等问题，你可以通过提前招聘、借调人员和据理力争修改项目计划或者项目范围等方式来应对。
 
 
 #### 6.2 问题处理
@@ -85,28 +86,36 @@
 
 ### 07.四象限一之理人
 #### 7.1 团队建设
-- 团队建设是指，通过举行各种形式的活动来增强团队成员的团队意识和协作精神，让团队成员相互之间更加了解和信任，同时释放工作压力。常见的团队建设活动有聚餐、轰趴、户外运动和旅游等，大部分公司在团建方面也有一些制度规范和经费支持。
+- 团队建设是指，通过举行各种形式的活动来增强团队成员的团队意识和协作精神，让团队成员相互之间更加了解和信任，同时释放工作压力。
+- 常见的团队建设活动有聚餐、轰趴、户外运动和旅游等，大部分公司在团建方面也有一些制度规范和经费支持。
 
 
 #### 7.2 团队培养
-- 团队培养是指，通过各种手段提升团队成员的能力，让团队成员既能够更好的完成工作任务，也能够逐步晋升到更高的级别。团队培养也是管理者的核心工作之一，但在实践中经常被忽视，因为团队培养的投入很明显，但产出却不明显。如果团队工作比较繁重，最先缩减的往往就是团队培养相关的事情。
-- 常见的培养手段有以下 4 种：
-- 定向自主学习：管理者指定学习目标和计划，团队成员自主学习，到了计划的时间后进行检查。这种方式比较适合 P5/P6 成员的培养，比如 TL 指定某几个团队成员在 3 个月内学习设计模式，然后让他们统一给团队做培训或分享。培训：根据团队需要安排相关培训，包括业务培训、技术培训、晋升培训等。这种方式适合大部分团队成员。以战代练：通过带着成员做或者授权成员负责某个事项，让对方在做事情的过程中边做边学，以战代练。这种方式适合培养团队核心人员，尤其是对于有晋升需求的骨干人员，应该优先安排对晋升有帮助的工作任务。技术交流：提供一些技术交流的机会，让团队成员能够开拓技术视野，认识更多业界同行，提升自己的影响力，比如参加技术大会和技术交流会议等。这种方式适合培养团队核心人员，一般要求 P7+ 以上的级别。
+- 团队培养是指，通过各种手段提升团队成员的能力，让团队成员既能够更好的完成工作任务，也能够逐步晋升到更高的级别。
+- 团队培养也是管理者的核心工作之一，但在实践中经常被忽视，因为团队培养的投入很明显，但产出却不明显。
+- 如果团队工作比较繁重，最先缩减的往往就是团队培养相关的事情。常见的培养手段有以下 4 种：
+- 定向自主学习：管理者指定学习目标和计划，团队成员自主学习，到了计划的时间后进行检查。这种方式比较适合高级成员的培养，比如 TL 指定某几个团队成员在 3 个月内学习设计模式，然后让他们统一给团队做培训或分享。
+- 培训：根据团队需要安排相关培训，包括业务培训、技术培训、晋升培训等。这种方式适合大部分团队成员。
+- 以战代练：通过带着成员做或者授权成员负责某个事项，让对方在做事情的过程中边做边学，以战代练。这种方式适合培养团队核心人员，尤其是对于有晋升需求的骨干人员，应该优先安排对晋升有帮助的工作任务。
+- 技术交流：提供一些技术交流的机会，让团队成员能够开拓技术视野，认识更多业界同行，提升自己的影响力，比如参加技术大会和技术交流会议等。这种方式适合培养团队核心人员，一般要求资深以上的级别。
 
 
 
 #### 7.3 团队激励
-- 团队激励是指，激发团队成员的潜能和战斗力，让团队更有激情和效率。常见的激励的手段包括，发表一篇激情四射的演说、在失败的时候鼓舞团队、在成功的时候由衷的表扬团队、给团队成员颁发一些奖项等。从中长期来看，最有效的激励手段还是带领团队拿到结果和绩效。否则，没有结果的承诺就变成了画大饼，没有结果的鼓舞就变成了大忽悠，不但起不到激励作用，甚至可能还有反效果。
+- 团队激励是指，激发团队成员的潜能和战斗力，让团队更有激情和效率。常见的激励的手段包括，在失败的时候鼓舞团队、在成功的时候由衷的表扬团队、给团队成员颁发一些奖项等。
+- 从中长期来看，最有效的激励手段还是带领团队拿到结果和绩效。否则，没有结果的承诺就变成了画大饼，没有结果的鼓舞就变成了大忽悠，不但起不到激励作用，甚至可能还有反效果。
 
 
 ### 08.管理的核心原则
-- 管理四象限的 12 类工作已经基本能够覆盖管理的方方面面。就算你之前对管理没有系统的概念，也可以依样画葫芦地进行团队管理。这些经验虽说不能保证让你成为一个优秀的管理者，但是能够让你做到八九不离十，在管理上不会出现很大的偏差。
-- 这 12 类工作看起来很多，但并不是让你平均用力。你需要结合业务和团队的现状，判断什么时候什么事情更重要，优先处理当前重要的事情，这是管理的核心原则：要事优先。
+- 管理四象限工作已经基本能够覆盖管理的方方面面。就算你之前对管理没有系统的概念，也可以依样画葫芦地进行团队管理。
+- 这些经验虽说不能保证让你成为一个优秀的管理者，但是能够让你做到八九不离十，在管理上不会出现很大的偏差。
+- 你需要结合业务和团队的现状，判断什么时候什么事情更重要，优先处理当前重要的事情，这是管理的核心原则：要事优先。
 
 
 ### 09.管理风格的类型
-- 关于领导力风格，或者叫管理风格，如果你去网上搜索，会看到很多不同的视角和说法。如果真要给这些不同的说法找到一个底层的逻辑，我认为所谓管理风格，本质就是你和团队的协作方式，也就是你和团队的“位置关系”，即你站在团队的什么位置。如果还是难以想象，你可以把带团队，看作是在驾驭一辆马车，你和这几匹马是如何协作，一起把车拉到目的地呢？
-
+- 关于领导力风格，或者叫管理风格，如果你去网上搜索，会看到很多不同的视角和说法。
+- 如果真要给这些不同的说法找到一个底层的逻辑，所谓管理风格，本质就是你和团队的协作方式，也就是你和团队的“位置关系”，即你站在团队的什么位置。
+- 如果还是难以想象，你可以把带团队，看作是在驾驭一辆马车，你和这几匹马是如何协作，一起把车拉到目的地呢？
 
 
 #### 9.1 发号施令型
@@ -138,6 +147,7 @@
 - 授权式管理：不重人也不重事，关注目标和结果，不关心过程和人员发展。
 
 
+
 #### 9.6 用一个案例说明
 - 为了加深理解，我再用一个案例来示意一下。三国的故事，中国人都耳熟能详，其中有一段叫“刘备入川”：刘备在落凤坡损失军师庞统之后，就调集荆州的诸葛亮来支援西川，这时诸葛亮就需要把守卫荆州的重担交给刘备的二弟关羽。那他将会怎么样嘱托关羽呢？我们来看看四类不同风格的诸葛亮，会如何对关羽说呢？
 - 指令式的诸葛亮会说：“我把荆州托付给你，你对曹操要采取抵抗的策略，而对东吴一定要采取联合的策略，你一定要照我说的做，否则荆州肯定会丢。”
@@ -153,11 +163,9 @@
 - 当一项工作不容有闪失，而你又是唯一熟悉、且最有掌控力的人时，一个命令式的你可能更能降低风险、达成目标。所以，命令式管理最适用于需要强执行的场景。当一个团队特别需要凝聚力和斗志，需要攻坚的时候，一个支持式的你会促成很好的效果。所以，支持式管理特别能带团队士气和凝聚力，在带动大家热情和积极性方面很有优势。当有一些核心人才需要重点培养，团队需要发展梯队的时候，一个教练式的你会带来明显的效果。他们不但能把事情做好，个人能力还能成长。虽然执行速度通常不会太快，但是不会偏离方向。当团队梯队很成熟，团队成员需要发挥空间的时候，一个授权式的你能提供最恰当的管理方式。当然，如果你能驾驭多种风格，那是非常厉害的。大部分管理者都还是以自己最拿手的风格来带团队，其他方式仅在必要时使用。
 
 
-
-
 ### 10.最后需总结一下
 - 管理四象限的整体思路是，从管理的手段和范围来进行拆解。手段有两类，管和理，范围有两个，人和事，它们组合就得到了管事、管人、理事和理人这四个象限。
-- 管事包括团队规划、团队执行和团队汇报；管人包括团队构建、团队运作和团队考核；理事包括风险管理、问题处理和资源协调；理人包括团队建设、团队培养和团队激励。这 12 类工作已经涵盖了管理的方方面面。
+- 管事包括团队规划、团队执行和团队汇报；管人包括团队构建、团队运作和团队考核；理事包括风险管理、问题处理和资源协调；理人包括团队建设、团队培养和团队激励。
 - 管理的核心原则是，要事优先，结合业务和团队等现状，判断什么时候什么事情更重要，优先处理当前重要的事情。
 
 
