--- a/Read/Management/01.管理转变/08.如何让大家服我.md
+++ b/Read/Management/01.管理转变/08.如何让大家服我.md
@@ -2,6 +2,7 @@
 - 01.做管理遇到困难
 - 02.如何去解决迷惑
 - 03.能力三核的说明
+- 04.提升管理的能力
 
 
 
@@ -25,6 +26,20 @@
 
 
 
+
+
+### 04.提升管理的能力
+#### 4.1 管理技能积累不多
+- 很多人当上管理者都是被赶鸭子上架的，还没做好准备就被“安排”了。虽然公司选拔的一般都比较主动、沟通技能比较好的人，但是这两点只是管理技能中很小的一部分，光是满足这两点，离合格的管理者还有很大的差距。
+
+
+#### 4.2 管理知识的多样性
+- 管理本身其实是一门和专业技术同等级别的学科，但是很多人都没有系统地学习过。大部分人对管理的印象都来自平时工作中对自己 Leader 的观察。这样的学习既不系统，也不全面，而且 Leader 也不一定是优秀的管理者，运气不好可能会学越糟糕。
+- 还有很多人在晋升为管理者之后，会想要通过看书学习的方式提升自己的管理能力，但是打开网站一搜可能就傻眼了：书籍五花八门，方法多如牛毛，德鲁克、明茨伯格、稻盛和夫、任正非、马云、陈春花、华为管理法、谷歌管理方法等等，看得人眼花缭乱，但还是不知道到底应该跟谁学。
+
+
+#### 4.3 管理的不确定性。   
+- 技术人员习惯确定性的思维，而管理却需要面对人的不确定性。俗话说，有人的地方就有江湖。怎么让别人信服你，怎么让不同的人达成共识、凝聚力量，没有看上去那么简单，并不是把正确的做法告诉别人就可以了，也并不是你认为最优的做法，大家就一定会赞同。所以，技术人员晋升管理者后，往往会面临着这样的困境：不知道做什么，不知道怎么才能做好。
 
 
 
