--- a/Read/ReadMeWiki/00.方案实践/01.崩溃捕获设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/01.崩溃捕获设计实践.md
@@ -1,6 +1,6 @@
 #### 目录介绍
 - 01.整体介绍概述
-    - 1.1 项目背景
+    - 1.1 项目背景介绍
     - 1.2 遇到问题
     - 1.3 基础概念介绍
     - 1.4 设计目标
@@ -39,7 +39,7 @@
 
 
 ### 01.整体介绍概述
-#### 1.1 项目背景
+#### 1.1 项目背景介绍
 - `Android`的稳定性是`Android`性能的一个重要指标，它也是App质量构建体系中最基本和最关键的一环。如果应用经常崩溃率，或者关键功能不可用，那显然会对我们的留存产生重大影响。
 
 
